Se modifico el nombre del valor de un input

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <form role="search" class="form-search">
                     <div class="form-search__input-box ">
                         <i class="form-search__icon-search fas fa-search"></i>
-                        <input class="form-search__input" type="serach" placeholder="Buscar ...">
+                        <input class="form-search__input" type="search" placeholder="Buscar ...">
                     </div>
     
                 </form>
